@@ -67,7 +67,6 @@ typedef struct
 	UINT16           usTactialTurnLimitCounter;
 	BOOLEAN          fInTopMessage;
 	UINT8            ubTopMessageType;
-	wchar_t          zTopMessageString[20];
 	UINT16           usTactialTurnLimitMax;
 	UINT32           uiTactialTurnLimitClock;
 	BOOLEAN          fTactialTurnLimitStartedBeep;
