@@ -1,3 +1,4 @@
+(r3920) Fix a vanilla string buffer overrun, occuring in the French and Italian translations, when displaying the turn message at the top in combat.
 (r3919) Fix a vanilla bug, which accessed uninitialised data.
 (r3918) Fix a bug in r3226, which broke saving/loading savegames in the Windows version.
 (r3915) Fix a vanilla bug, which made items invisible, end up on the wrong level (floor/roof) or hover above the ground, when shuffling them in the sector inventory.
